Advancing 0.13.0-rc1 release to status: admiral
Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/releases/v0.13.0-rc1.yaml
+++ b/releases/v0.13.0-rc1.yaml
@@ -3,6 +3,7 @@ version: v0.13.0-rc1
 name: 0.13.0-rc1
 pre-release: true
 branch: release-0.13
-status: shipyard
+status: admiral
 components:
   shipyard: 9b91c1e69cea262c5da51d20f1749d3ecb485246
+  admiral: 0c97a94b8c90fec929b41c273face0f51f482832
