--- a/releases/v0.13.0-rc1.yaml
+++ b/releases/v0.13.0-rc1.yaml
@@ -3,10 +3,12 @@ version: v0.13.0-rc1
 name: 0.13.0-rc1
 pre-release: true
 branch: release-0.13
-status: projects
+status: installers
 components:
   shipyard: 9b91c1e69cea262c5da51d20f1749d3ecb485246
   admiral: 0c97a94b8c90fec929b41c273face0f51f482832
   cloud-prepare: 8d5e69e408e31d2b1183ba5888d5295efbfacdea
   lighthouse: 84ccd8b08e9bcf67a10c5c6f96609705820e193d
   submariner: 632748c14c119d5b5fb4a701e22c32b25dc68c6a
+  submariner-charts: dc3f31ab888b172f31d0a53c9572e67e80e648df
+  submariner-operator: aa9acb0fb7a2fcaa664f9ced8aa1fea70a5ae001
