--- a/releases/v0.12.2.yaml
+++ b/releases/v0.12.2.yaml
@@ -2,6 +2,7 @@
 version: v0.12.2
 name: 0.12.2
 branch: release-0.12
-status: shipyard
+status: admiral
 components:
   shipyard: cae989dd79ed4aa77fe317f4843b54bcf36dbff2
+  admiral: d1e873df55a7378572058ce5fe2534ecd5425f6a
