--- a/releases/v0.13.0-rc2.yaml
+++ b/releases/v0.13.0-rc2.yaml
@@ -3,6 +3,7 @@ version: v0.13.0-rc2
 name: 0.13.0-rc2
 pre-release: true
 branch: release-0.13
-status: shipyard
+status: admiral
 components:
   shipyard: 9b91c1e69cea262c5da51d20f1749d3ecb485246
+  admiral: 2239a501d8c1a03be1b7b08f722e74a8d32d2ca8
