--- a/releases/v0.13.0-rc2.yaml
+++ b/releases/v0.13.0-rc2.yaml
@@ -3,7 +3,10 @@ version: v0.13.0-rc2
 name: 0.13.0-rc2
 pre-release: true
 branch: release-0.13
-status: admiral
+status: projects
 components:
   shipyard: 9b91c1e69cea262c5da51d20f1749d3ecb485246
   admiral: 2239a501d8c1a03be1b7b08f722e74a8d32d2ca8
+  cloud-prepare: a4dda976d643d2cb5283e4b7cacf06341cf6d130
+  lighthouse: c454961ea91af3bc45a1f40e157083f32269049c
+  submariner: 7531271eaffb81219917dcb14a9fcebc3f498b68
