--- a/releases/v0.13.0.yaml
+++ b/releases/v0.13.0.yaml
@@ -2,6 +2,7 @@
 version: v0.13.0
 name: 0.13.0
 branch: release-0.13
-status: shipyard
+status: admiral
 components:
   shipyard: 9b91c1e69cea262c5da51d20f1749d3ecb485246
+  admiral: ba50d1ef5abbbac13a1712d8645677a269df0e04
