--- a/releases/v0.13.0.yaml
+++ b/releases/v0.13.0.yaml
@@ -2,7 +2,7 @@
 version: v0.13.0
 name: 0.13.0
 branch: release-0.13
-status: installers
+status: released
 components:
   shipyard: 9b91c1e69cea262c5da51d20f1749d3ecb485246
   admiral: ba50d1ef5abbbac13a1712d8645677a269df0e04
@@ -11,3 +11,4 @@ components:
   submariner: 04e71cf9f700c2f76350c9c175d8be8dd00d9e52
   submariner-charts: 883b84784a14d22a394aaec1b15219e79c55b5fa
   submariner-operator: e3c4f136e9da3f3707f105af1022b5fa245b6efc
+  subctl: 48fc0985db88c77617de1d419d81ae751774317b
