Advancing 0.14.0-m0 release to status: admiral
Signed-off-by: Maayan Friedman <maafried@redhat.com>

--- a/releases/v0.14.0-m0.yaml
+++ b/releases/v0.14.0-m0.yaml
@@ -2,6 +2,7 @@
 version: v0.14.0-m0
 name: 0.14.0-m0
 pre-release: true
-status: shipyard
+status: admiral
 components:
   shipyard: 4d1252c3148034c2da19e53304a266972195ba27
+  admiral: 069480a1e9b18d82f681b3f5ed673a442a7aef11
