Advancing 0.14.0-m1 release to status: admiral
Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/releases/v0.14.0-m1.yaml
+++ b/releases/v0.14.0-m1.yaml
@@ -3,6 +3,7 @@
 version: v0.14.0-m1
 name: 0.14.0-m1
 pre-release: true
-status: shipyard
+status: admiral
 components:
   shipyard: a4699062926bb7a20422ee6dd05b5810a4cd8b64
+  admiral: 6665f4d6502144c27b7c3c61455a8b757010b100
