--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -1,4 +1,5 @@
-FROM quay.io/submariner/shipyard-dapper-base:devel
+ARG BASE_BRANCH
+FROM quay.io/submariner/shipyard-dapper-base:${BASE_BRANCH}
 
 ENV DAPPER_SOURCE=/releases PATH=/releases/scripts:$PATH DAPPER_DOCKER_SOCKET=true \
     DAPPER_ENV="GIT_EMAIL GIT_NAME GITHUB_ACTOR GITHUB_REPOSITORY_OWNER GITHUB_TOKEN MAKEFLAGS QUAY_USERNAME QUAY_PASSWORD RELEASE_TOKEN"
