--- a/releases/v0.14.0-m2.yaml
+++ b/releases/v0.14.0-m2.yaml
@@ -2,7 +2,7 @@
 version: v0.14.0-m2
 name: 0.14.0-m2
 pre-release: true
-status: installers
+status: released
 components:
   shipyard: d96023ced86f39ab726fcde20788ad51195daa37
   admiral: 7e3a532683036a51379ddf9762e33349c0e2e7e1
@@ -11,3 +11,4 @@ components:
   submariner: 479720480de97ecf611a44fa4bc2f6c793f94dbe
   submariner-charts: 34065476744543c5f27ebf0a26478fd60b4e5bd5
   submariner-operator: 739ce73cd9152fc22432a6226959550a3715ab40
+  subctl: e8ab9edede888f720b64f5c81e7280027b45c518
