--- a/releases/v0.14.0-rc0.yaml
+++ b/releases/v0.14.0-rc0.yaml
@@ -4,6 +4,7 @@ version: v0.14.0-rc0
 name: 0.14.0-rc0
 pre-release: true
 branch: release-0.14
-status: shipyard
+status: admiral
 components:
   shipyard: 8bb84a20e0492020f3d3bd38f5ecb9c8ab5ab4e8
+  admiral: 9728bc9780c79b899cd6003fd33e0a0ddcff931a
