--- a/releases/v0.14.0-rc1.yaml
+++ b/releases/v0.14.0-rc1.yaml
@@ -3,6 +3,7 @@ version: v0.14.0-rc1
 name: 0.14.0-rc1
 pre-release: true
 branch: release-0.14
-status: shipyard
+status: admiral
 components:
   shipyard: 8bb84a20e0492020f3d3bd38f5ecb9c8ab5ab4e8
+  admiral: 46221168dd3c0a4729ede53085fe9547fb446007
