--- a/releases/v0.14.0-rc1.yaml
+++ b/releases/v0.14.0-rc1.yaml
@@ -3,7 +3,7 @@ version: v0.14.0-rc1
 name: 0.14.0-rc1
 pre-release: true
 branch: release-0.14
-status: installers
+status: released
 components:
   shipyard: 8bb84a20e0492020f3d3bd38f5ecb9c8ab5ab4e8
   admiral: 46221168dd3c0a4729ede53085fe9547fb446007
@@ -12,3 +12,4 @@ components:
   submariner: e61885ad47e7c694c0ec16d83ec4575642710caa
   submariner-charts: b19b7e6294344985f326cf7cb210bb49c53817e5
   submariner-operator: 768224574215493b243d5460c7e98085a445190b
+  subctl: c029ce50e45c6664647c9fa1dc857586295fac9a
