--- a/releases/v0.14.0-rc2.yaml
+++ b/releases/v0.14.0-rc2.yaml
@@ -3,6 +3,7 @@ version: v0.14.0-rc2
 name: 0.14.0-rc2
 pre-release: true
 branch: release-0.14
-status: shipyard
+status: admiral
 components:
   shipyard: 3cbda51118afc3047fbbdce50f6b92528feb2e51
+  admiral: 752b6c94207601b909e2a1abb978674c6f201770
