--- a/releases/v0.14.0-rc2.yaml
+++ b/releases/v0.14.0-rc2.yaml
@@ -3,7 +3,7 @@ version: v0.14.0-rc2
 name: 0.14.0-rc2
 pre-release: true
 branch: release-0.14
-status: installers
+status: released
 components:
   shipyard: 3cbda51118afc3047fbbdce50f6b92528feb2e51
   admiral: 752b6c94207601b909e2a1abb978674c6f201770
@@ -12,3 +12,4 @@ components:
   submariner: 002b3b0189036f24c8d622d1d365be9078216c11
   submariner-charts: b19b7e6294344985f326cf7cb210bb49c53817e5
   submariner-operator: 31a700c0851b77c1e521ac4d551933026d1b1e03
+  subctl: 1747d7bd1533663340300932bb6e9b8222df8c77
