--- a/releases/v0.14.0-rc4.yaml
+++ b/releases/v0.14.0-rc4.yaml
@@ -3,7 +3,10 @@ version: v0.14.0-rc4
 name: 0.14.0-rc4
 pre-release: true
 branch: release-0.14
-status: admiral
+status: projects
 components:
   shipyard: f6ef77489d735185ad7d200926bc151c11e03200
   admiral: df50f126a51e8ecad34ec3359ed62eb56f9b0bcd
+  cloud-prepare: 0996e9d045345b7a80802b9ab973f813472a1ee4
+  lighthouse: 2d408cc05427f668e2fba5fbc4ba6baa9c9f9c8a
+  submariner: 7b46cc0f70e613a2edfaf2b3069364212b1d5a86
