--- a/releases/v0.14.0-rc4.yaml
+++ b/releases/v0.14.0-rc4.yaml
@@ -3,10 +3,12 @@ version: v0.14.0-rc4
 name: 0.14.0-rc4
 pre-release: true
 branch: release-0.14
-status: projects
+status: installers
 components:
   shipyard: f6ef77489d735185ad7d200926bc151c11e03200
   admiral: df50f126a51e8ecad34ec3359ed62eb56f9b0bcd
   cloud-prepare: 0996e9d045345b7a80802b9ab973f813472a1ee4
   lighthouse: 2d408cc05427f668e2fba5fbc4ba6baa9c9f9c8a
   submariner: 7b46cc0f70e613a2edfaf2b3069364212b1d5a86
+  submariner-charts: b19b7e6294344985f326cf7cb210bb49c53817e5
+  submariner-operator: 803d6e46df3b401ba986664b852bb0d83021f447
