--- a/releases/v0.14.0.yaml
+++ b/releases/v0.14.0.yaml
@@ -2,10 +2,12 @@
 version: v0.14.0
 name: 0.14.0
 branch: release-0.14
-status: projects
+status: installers
 components:
   shipyard: f6ef77489d735185ad7d200926bc151c11e03200
   admiral: a87e9e2a07453a75dfb6b1adf03333c690037ed2
   cloud-prepare: 1d5fb84e8de9119db4ee6315d04e4f47bfeb098c
   lighthouse: b0b8db4df07c353f196f5c1af2160b1993466363
   submariner: 88d6b4da048295198e5ee100fac7a648f44cd874
+  submariner-charts: b19b7e6294344985f326cf7cb210bb49c53817e5
+  submariner-operator: 25fe2906543ce789ab96d465058c88fe50a31656
