Advancing 0.13.2 release to status: admiral
Signed-off-by: Maayan Friedman <maafried@redhat.com>

--- a/releases/v0.13.2.yaml
+++ b/releases/v0.13.2.yaml
@@ -2,6 +2,7 @@
 version: v0.13.2
 name: 0.13.2
 branch: release-0.13
-status: shipyard
+status: admiral
 components:
   shipyard: 020c5e4622b747bfc99cec6d45da0ed4c81d11ea
+  admiral: d097b05699fde25e59e378c76d82af3bd37a2954
