--- a/releases/v0.14.1.yaml
+++ b/releases/v0.14.1.yaml
@@ -2,6 +2,7 @@
 version: v0.14.1
 name: 0.14.1
 branch: release-0.14
-status: shipyard
+status: admiral
 components:
   shipyard: 0e9e5e48000d26e5b859d1cd11bffc572b17ac47
+  admiral: d84c5d552fd611de50880633eca750cc65e28566
