Comment on release failures as well
Right now the comment being posted doesn't reflect if the release
actually succeeded or not, and would comment something even on
failures.

This change will have the release comment more informatively on
failures, and link to the job so that it can be inspected.

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,4 +34,5 @@ jobs:
           QUAY_USERNAME: ${{ secrets.QUAY_USERNAME }}
           QUAY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
           RELEASE_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+          GITHUB_JOB_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }}
         run: make do-release
