--- a/releases/v0.13.3.yaml
+++ b/releases/v0.13.3.yaml
@@ -2,7 +2,10 @@
 version: v0.13.3
 name: 0.13.3
 branch: release-0.13
-status: admiral
+status: projects
 components:
   shipyard: 959d251dceae8489144485e55ea9e756cc0e6807
   admiral: 130e4943409cc65a4dc36cb8606e24f417d2f868
+  cloud-prepare: d001ee68eaf83da8972c4827293a9ee6c63d8b04
+  lighthouse: 8cc2c62d90b900fbcae02f2a26270a2633641701
+  submariner: 04b6e651105625ed6a0d8543b6fffbc0860c4354
