--- a/releases/v0.13.3.yaml
+++ b/releases/v0.13.3.yaml
@@ -2,7 +2,7 @@
 version: v0.13.3
 name: 0.13.3
 branch: release-0.13
-status: installers
+status: released
 components:
   shipyard: 959d251dceae8489144485e55ea9e756cc0e6807
   admiral: 130e4943409cc65a4dc36cb8606e24f417d2f868
@@ -11,3 +11,4 @@ components:
   submariner: 04b6e651105625ed6a0d8543b6fffbc0860c4354
   submariner-charts: 0280e8aaf4dc09c5357553d80c0230cf068349b5
   submariner-operator: 77d76aad1645bfdb34211769c10018fa2001a25b
+  subctl: e03559d8c13e0a1c5aa25e8dd8ab39dd63857ae3
