--- a/releases/v0.15.0-m1.yaml
+++ b/releases/v0.15.0-m1.yaml
@@ -2,6 +2,7 @@
 version: v0.15.0-m1
 name: 0.15.0-m1
 pre-release: true
-status: shipyard
+status: admiral
 components:
   shipyard: abaf51876258e0505beef6de4c8d51268f027575
+  admiral: 8dc346b84a6e98fb22d70a6df3da536afa1332b0
