Output test logs and capture summary
Instead of hiding the logs, output them so that they can be inspected.
A test summary is captured for easy identification of failed tests.

GHA gets special treatment which groups the logs for easier reading.

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -2,7 +2,7 @@ ARG BASE_BRANCH
 FROM quay.io/submariner/shipyard-dapper-base:${BASE_BRANCH}
 
 ENV DAPPER_SOURCE=/releases PATH=/releases/scripts:$PATH DAPPER_DOCKER_SOCKET=true \
-    DAPPER_ENV="GIT_EMAIL GIT_NAME GITHUB_ACTOR GITHUB_REPOSITORY_OWNER GITHUB_TOKEN MAKEFLAGS QUAY_USERNAME QUAY_PASSWORD RELEASE_TOKEN"
+    DAPPER_ENV="CI GIT_EMAIL GIT_NAME GITHUB_ACTOR GITHUB_REPOSITORY_OWNER GITHUB_TOKEN MAKEFLAGS QUAY_USERNAME QUAY_PASSWORD RELEASE_TOKEN"
 ENV DAPPER_OUTPUT=${DAPPER_SOURCE}/output
 
 WORKDIR ${DAPPER_SOURCE}
