Deprecate `dryrun`, use `DRY_RUN` instead
This flag name is more aligned with our entire naming scheme (especially
flags in Shipyard).

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -40,4 +40,4 @@ jobs:
           QUAY_USERNAME: ${{ secrets.QUAY_USERNAME }}
           QUAY_PASSWORD: ${{ secrets.QUAY_PASSWORD }}
           RELEASE_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-        run: make do-release dryrun=true
+        run: make do-release DRY_RUN=true
