--- a/releases/v0.15.0-m2.yaml
+++ b/releases/v0.15.0-m2.yaml
@@ -1,7 +1,7 @@
 ---
 version: v0.15.0-m2
 name: 0.15.0-m2
-status: installers
+status: released
 components:
   shipyard: 124ee0a0d60c292440660af9b384af945517cdbe
   admiral: 5b68cbdc2873c66217c039f74404016d4a63fb02
@@ -10,3 +10,4 @@ components:
   submariner: 47f3b898e3e73c0ed21f0c5b61f1ae7f8935b270
   submariner-charts: b8af85b7e822fa74be6f0e0d0e888a3eba3f43de
   submariner-operator: def7cfe32b7486d766c19903cc53fa29a69566ec
+  subctl: f9aed3517a08d58af290cecb55d5a7b27f80be01
