Use `Depends on <update PR>` when creating release
Instead of validating no update PRs are still open, utilize our use of
dependency checks to have the created release PR depend on the open PRs.
Once all PRs are merged, the project SHAs can be updated and the PR can
proceed.

Signed-off-by: Mike Kolesnik <mkolesni@redhat.com>

--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -3,6 +3,8 @@ name: Validation
 
 on:
   pull_request:
+    # Unlabeled is needed when `dependent` label is removed, to re-validate the release.
+    types: [unlabeled, opened, synchronize, reopened]
 
 permissions: {}
 
