--- a/releases/v0.14.2.yaml
+++ b/releases/v0.14.2.yaml
@@ -2,6 +2,7 @@
 version: v0.14.2
 name: 0.14.2
 branch: release-0.14
-status: shipyard
+status: admiral
 components:
   shipyard: 711f9d28e241a52c57ef549f10eb1aa8930d67ff
+  admiral: 9c302e62e0ff0dc6de8f20cdf473526b2f8f0782
