--- a/releases/v0.13.4.yaml
+++ b/releases/v0.13.4.yaml
@@ -2,7 +2,7 @@
 version: v0.13.4
 name: 0.13.4
 branch: release-0.13
-status: installers
+status: released
 components:
   shipyard: 32d409523c0f5ac0316650048e410284d0f1e2d5
   admiral: a43edec490db6d1ed7c658b9d8424095fde92d04
@@ -11,3 +11,4 @@ components:
   submariner: 7c6078e874fcd4da132be06fc46e0c01448d4382
   submariner-charts: 67f10a6625788741b40d55b70e8b8b9c36d5ff5c
   submariner-operator: af0efaf644297ba98e61ca97663f33ab33b4a2f7
+  subctl: bf9e63fc52fbe58693ccf6080243992eb336fbe9
