--- a/releases/v0.15.0-m4.yaml
+++ b/releases/v0.15.0-m4.yaml
@@ -1,7 +1,7 @@
 ---
 version: v0.15.0-m4
 name: 0.15.0-m4
-status: installers
+status: released
 components:
   shipyard: c266376ca9c6bc29e803f1b4031333bfd0f34ec7
   admiral: dbf1f8e48ebfdb7b10cc38d6f74f35a3acdad0c6
@@ -10,3 +10,4 @@ components:
   submariner: 0da4dfced9c2d119bfdf6165d38f6126473a6e38
   submariner-charts: c0ce6ae23951fbe8aeed3a19f3c0b274ac04b322
   submariner-operator: 52a365258c6feeb9db83842db3e1cf4874baac70
+  subctl: 0df6bfe9e13893603fae965d125d6bc6759865e4
