--- a/releases/v0.15.0-rc0.yaml
+++ b/releases/v0.15.0-rc0.yaml
@@ -3,4 +3,6 @@ version: v0.15.0-rc0
 name: 0.15.0-rc0
 pre-release: true
 branch: release-0.15
-status: branch
+status: shipyard
+components:
+  shipyard: 9be8e3ff84725d3af9c7cc215d6bdfa8990723bb
