Advancing 0.15.0-rc0 release to status: installers
Advancing 0.15.0-rc0 release to status: installers

Signed-off-by: Vishal Thapar <5137689+vthapar@users.noreply.github.com>

--- a/releases/v0.15.0-rc0.yaml
+++ b/releases/v0.15.0-rc0.yaml
@@ -3,10 +3,12 @@ version: v0.15.0-rc0
 name: 0.15.0-rc0
 pre-release: true
 branch: release-0.15
-status: projects
+status: installers
 components:
   shipyard: 9be8e3ff84725d3af9c7cc215d6bdfa8990723bb
   admiral: 46cb4212e940082bedcfdf551b8324a3807cb84f
   cloud-prepare: 5eddc500af98da7517bac57793ca8748ce02d230
   lighthouse: 873b36a324c9cbc1abe473788dce95e408e026a0
   submariner: 13e2c1be4465a5a64583c8f79405271e7086a083
+  submariner-charts: 8875863726aa983cee9b3a6a8527c961fb2c52ba
+  submariner-operator: a5a71c44e5274d22eaa73da25b77f67cbbb5acec
