--- a/releases/v0.15.0.yaml
+++ b/releases/v0.15.0.yaml
@@ -2,10 +2,12 @@
 version: v0.15.0
 name: 0.15.0
 branch: release-0.15
-status: projects
+status: installers
 components:
   shipyard: 4b02307e4332a05dbfe99b3a6707314c01680424
   admiral: c6b6cb361f3dae4dbffc8e6e81b8acb7118d8131
   cloud-prepare: d17e830b611eae2ce5421fc23d8b3c50ca4fd0dd
   lighthouse: 55eaeff4d37799fb5b21e6a958e49817c4e6c659
   submariner: a7276fcf70b5399dc682f7eace3c4e373fa60b0b
+  submariner-charts: ffcffb9468d7da2f92ff7918568056956b7f7946
+  submariner-operator: 98405e171c3e3a41b4b84e263e538909792f68e4
