--- a/releases/v0.15.0.yaml
+++ b/releases/v0.15.0.yaml
@@ -2,7 +2,7 @@
 version: v0.15.0
 name: 0.15.0
 branch: release-0.15
-status: installers
+status: released
 components:
   shipyard: 4b02307e4332a05dbfe99b3a6707314c01680424
   admiral: c6b6cb361f3dae4dbffc8e6e81b8acb7118d8131
@@ -11,3 +11,4 @@ components:
   submariner: a7276fcf70b5399dc682f7eace3c4e373fa60b0b
   submariner-charts: ffcffb9468d7da2f92ff7918568056956b7f7946
   submariner-operator: 98405e171c3e3a41b4b84e263e538909792f68e4
+  subctl: fda4d979d7761561ba3acd9eb2eb55790daed6b0
