--- a/releases/v0.14.4.yaml
+++ b/releases/v0.14.4.yaml
@@ -2,6 +2,7 @@
 version: v0.14.4
 name: 0.14.4
 branch: release-0.14
-status: shipyard
+status: admiral
 components:
   shipyard: 2d1b59617490b71afca4544ed40d46682fc06eb3
+  admiral: b0a3f4ef364a362494c949dd7f3bfa64e751e2b1
