--- a/releases/v0.14.4.yaml
+++ b/releases/v0.14.4.yaml
@@ -2,10 +2,12 @@
 version: v0.14.4
 name: 0.14.4
 branch: release-0.14
-status: projects
+status: installers
 components:
   shipyard: 2d1b59617490b71afca4544ed40d46682fc06eb3
   admiral: b0a3f4ef364a362494c949dd7f3bfa64e751e2b1
   cloud-prepare: b674d3066c0c154dfd66994c077aceef64ec6366
   lighthouse: ec9433af6869b37e3b9786f2b241d1ef80cf5624
   submariner: c73bb95377f0aa65e9bb56ba262ba8eeb69e4ce6
+  submariner-charts: fb7ee2e6103816108881bb3140b909097783e291
+  submariner-operator: 7c4c12d22b7a4126ed199c4f68ceaf151c7cbfcd
