--- a/releases/v0.13.5.yaml
+++ b/releases/v0.13.5.yaml
@@ -2,10 +2,12 @@
 version: v0.13.5
 name: 0.13.5
 branch: release-0.13
-status: projects
+status: installers
 components:
   shipyard: 1e9679ab72ede30d412281e8dac0217703db14e6
   admiral: 38de859d23ae94defcc508fcdef14aae543e26db
   cloud-prepare: 5df3696e06c8c44cd108d806899c1f1aaf51070c
   lighthouse: 5f9738c76baf7f24a6401ec9c86a74ac63a69e26
   submariner: 7e380669ce0886c746f06c6562d60001c944a075
+  submariner-charts: 756c7e1b09711ccc926cf64e4762230dca2fd479
+  submariner-operator: 849f9112ff4cb4a28b538aaec12b0e45d8a1d603
