--- a/releases/v0.12.4.yaml
+++ b/releases/v0.12.4.yaml
@@ -2,6 +2,7 @@
 version: v0.12.4
 name: 0.12.4
 branch: release-0.12
-status: shipyard
+status: admiral
 components:
   shipyard: 02187194635294c27d4866b71d69f2eccabb098e
+  admiral: 4c0df6660bfa777e8fde460d0d717c749d696fe7
